# tyegit

./: .env.example  .gitignore  CHANGELOG.md  COPYRIGHT.md  LICENSE  README.md  SECURITY.md  UPDATER_GUIDE.md  package.json  scratchpad_graph.md  todo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: deploy.yml  release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tyegit.key  tyegit.key.pub
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  ai.rs  auth.rs  branch.rs  commit.rs  github.rs  merge.rs  mod.rs  rebase.rs  repository.rs  staging.rs  stash.rs  sync.rs  tag.rs
src-tauri/src/db/: sqlite.rs
src-tauri/src/git/: auth.rs  branch.rs  commit.rs  diff.rs  graph.rs  history.rs  merge.rs  mod.rs  network.rs  rebase.rs  repository.rs  staging.rs  stash.rs  state.rs  status.rs  tags.rs
src/components/Agent/: AgentChatPanel.tsx
src/components/Modals/: AuthModal.tsx  BranchModal.tsx  CommandPalette.tsx  HelpModal.tsx  LogViewerModal.tsx  MergeModal.tsx  RemoteModal.tsx  SettingsModal.tsx  TagModal.tsx  UpdateModal.tsx  VisualRebaseModal.tsx
src/components/Repository/: CommitGraph.tsx  DiffViewer.tsx  GithubPanel.tsx  HistoryPanel.tsx  RepositoryHeader.tsx  StatusPanel.tsx
src/pages/: Home.tsx  RepositoryView.tsx
website/: next.config.ts  package.json
website/.source/: browser.ts  server.ts
website/content/docs/: architecture.mdx  github.mdx  (+9 more)
website/public/: updater.json
(+21 files in other folders)
