[package]
name = "tyegit"
version = "2.2.0"
description = "A fast, tactile Git client built in Rust."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tauri-plugin-dialog = "2.7.1"
fuzzy-matcher = "0.3.7"
reqwest = { version = "0.13.4", features = ["json"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
